# API-PYTHON

./: app.py  pyproject.toml  testes.ipynb
