[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["FabricioFavero <fabriciofavero@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
requests = "^2.32.3"
streamlit = "^1.39.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
